[project]
name = "corpus-analysis"
version = "0.1.0"
description = "The goal of this project is to gain experience analyzing a corpus using various methods"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
